tests/ui/impl-trait/in-trait/refine-resolution-errors.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/refine-resolution-errors.rs:9:6
   |
LL | impl<T: ?Sized> Mirror for () {
   |      ^ unconstrained type parameter

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
